@@ -2,6 +2,7 @@
 #define __MARK5_DIRECTORY_STRUCTS__
 
 #define MODULE_LEGACY_MAX_SCANS		1024
+#define MODULE_NEOLEGACY_MAX_SCANS	1024
 #define MODULE_EXTENDED_VSN_LENGTH	32
 #define MODULE_STATION_NAME_LENGTH	2
 #define MODULE_SCAN_NAME_LENGTH         32
@@ -14,9 +15,24 @@
 #define MODULE_STATUS_RECORDED          0x04
 #define MODULE_STATUS_BANK_MODE         0x08
 
+enum Mark5DirClass
+{
+	Mark5DirClassLegacy = 0,	/* Mark5A or B, with 1024 scan max */
+	Mark5DirClassMark5C,		/* Mark5C */
+	Mark5DirClassNeoLegacy,		/* Mark5A or B, with 65536 scan max */
+	Mark5DirClassNone,		/* no dir on module */
+	Mark5DirClassIllegal		/* does not map to any legal dir type */
+};
 
+struct Mark5DirectoryInfo
+{
+	enum Mark5DirClass dirClass;
+	int dirVersion;
+	int nScan;
+	unsigned int signature;
+};
 
-/* as implemented in Mark5A */
+/* as implemented in Mark5A and Mark5B */
 struct Mark5LegacyDirectory
 {
 	int nscans; /* Number of scans herein */
@@ -24,6 +40,18 @@ struct Mark5LegacyDirectory
 	char scanName[MODULE_LEGACY_MAX_SCANS][MODULE_LEGACY_SCAN_LENGTH]; /* Extended name */
 	unsigned long long start[MODULE_LEGACY_MAX_SCANS]; /* Start byte position */
 	unsigned long long length[MODULE_LEGACY_MAX_SCANS]; /* Length in bytes */
+	unsigned long long recpnt; /* Record offset, bytes (not a pointer) */
+	long long plapnt; /* Play offset, bytes */
+	double playRate; /* Playback clock rate, MHz */
+};
+
+struct Mark5NeoLegacyDirectory
+{
+	int nscans; /* Number of scans herein */
+	int n; /* Next scan to be accessed by "next_scan" */
+	char scanName[MODULE_NEOLEGACY_MAX_SCANS][MODULE_LEGACY_SCAN_LENGTH]; /* Extended name */
+	unsigned long long start[MODULE_NEOLEGACY_MAX_SCANS]; /* Start byte position */
+	unsigned long long length[MODULE_NEOLEGACY_MAX_SCANS]; /* Length in bytes */
 	unsigned long long recpnt; /* Record offset, bytes (not a pointer) */
 	long long plapnt; /* Play offset, bytes */
 	double playRate; /* Playback clock rate, MHz */
@@ -65,5 +93,26 @@ struct Mark5DirectoryVDIFBodyVer1
 {
 	unsigned short data[8][4];	/* packed bit fields for up to 8 thread groups */
 };
+
+enum Mark5DirectoryInfoStatus
+{
+	Mark5DirectoryInfoSuccess = 0,
+	Mark5DirectoryInfoErrorSize,
+	Mark5DirectoryInfoErrorGranularity,
+	Mark5DirectoryInfoErrorConnection,
+	Mark5DirectoryInfoErrorVersion,
+	Mark5DirectoryInfoErrorNScan,
+
+	Mark5DirectoryInfoEnumSize	/* list terminator */
+};
+
+extern const char Mark5DirectoryInfoStatusStrings[][40];
+
+
+int calculateMark5DirSignature(const unsigned char *data, int size);
+
+enum Mark5DirectoryInfoStatus getMark5DirectoryInfo(struct Mark5DirectoryInfo *info, const unsigned char *dirData, int dirSize);
+
+void fprintMark5DirectoryInfo(FILE *out, const struct Mark5DirectoryInfo *info);
 
 #endif
