@@ -5,6 +5,8 @@ Version 2.4.0
 * New utility  killjob  which executes: mk5control "killmpifxcorr jobId" all
 * When looking at incoming command messages (monitor.cpp), check against all local addresses, not just the "hostname"
 * mk5erase: ask before continuing on write-protected module (even if force is specified)
+* mk5dir: save a copy of the binary directory as well as the decoded directory
+* Revamped support for Mark5 directory structures: vsn
 
 Version 2.3.0
 ~~~~~~~~~~~~~
